2016-09-16  Jakub Jelinek  <jakub@redhat.com>

	PR c++/77338
	* constexpr.c (cxx_eval_constant_expression) <case PARM_DECL>: Only
	call is_really_empty_class on complete types.

	PR c++/77375
	* class.c (check_bases): Set CLASSTYPE_HAS_MUTABLE if any
	TYPE_HAS_MUTABLE_P for any bases.

2016-09-16  Jason Merrill  <jason@redhat.com>

	* class.c (check_bases, set_one_vmethod_tm_attributes): Use
	least_bit_hwi.
	* decl.c (cxx_init_decl_processing): Use pow2p_hwi.
	* parser.c (cp_parser_cilk_simd_vectorlength): Use pow2p_hwi.

2016-09-14  Jakub Jelinek  <jakub@redhat.com>

	PR c++/77549
	* name-lookup.c (consider_binding_level): Look through TREE_LIST
	and OVERLOAD.

2016-09-14  Marek Polacek  <polacek@redhat.com>

	* typeck.c (cp_build_unary_op): Diagnose incrementing boolean
	expressions.  Tweak an error message.

2016-09-14  Marek Polacek  <polacek@redhat.com>

	* cp-tree.h (cp_build_unary_op): Change nonconvert parameter type to
	bool.
	* decl2.c (one_static_initialization_or_destruction): Use true instead
	of 1.
	* init.c (build_vec_init): Use false instead of 0.
	* pt.c (tsubst_copy_and_build): Likewise.
	* semantics.c (simplify_loop_decl_cond): Likewise.
	* typeck.c (rationalize_conditional_expr): Likewise.
	(cp_build_binary_op): Use true instead of 1.
	(cp_build_unary_op): Change nonconvert parameter type to bool.  Use true
	instead of 1.
	(build_unary_op): Change nonconvert parameter type to bool.
	(unary_complex_lvalue): Use false instead of 0.

2016-09-13  Jakub Jelinek  <jakub@redhat.com>

	Implement P0028R4, C++17 using attribute namespaces without repetition
	* parser.c (cp_parser_std_attribute): Add ATTR_NS argument.  Diagnose
	non-NULL ATTR_NS with scoped attribute token.  Handle non-NULL
	ATTR_NS with non-scoped attribute tokens.  Allow named ops in
	identifier after ::.
	(cp_parser_std_attribute_list): Add ATTR_NS argument, pass it down
	to cp_parser_std_attribute calls.
	(cp_parser_std_attribute_spec): Parse optional C++17